// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation AND YET here is another 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-30T14:05-04:00",
  "currentFileTime": 132615867281669490,
  "dayOfTheWeek": "Tuesday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-89",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND YET here is another 2`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-30T14:05-04:00",
  "currentFileTime": 132615867284169520,
  "dayOfTheWeek": "Tuesday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-89",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation Hi here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation should not allow external requests in CI 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-30T18:05Z",
  "currentFileTime": 132616011274996350,
  "dayOfTheWeek": "Tuesday",
  "isDayLightSavingsTime": false,
  "ordinalDate": "2021-89",
  "serviceResponse": null,
  "timeZoneName": "UTC",
  "utcOffset": "00:00:00",
}
`;
